# Aviators_Flight_Analysis_Pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  Project_Specs.md  README.md  airflow.cfg  docker-compose.yaml  docker-compose.yml  execute.sh  map.html  pyproject.toml
dags/: basic_dag.py  basic_flow.py
data/checkpoint/: .metadata.crc  metadata
data/flight_events/: .part-00000-0002ef2e-d463-4f34-8a1b-4bb12e7e1bac-c000.snappy.parquet.crc  .part-00000-0092b5b1-153c-4199-99e5-6aa4d27e6b79-c000.snappy.parquet.crc  .part-00000-01fb805d-9d58-4dfc-93e6-46821b240f92-c000.snappy.parquet.crc  .part-00000-03d831ed-aeb7-429e-a708-41da94ba4316-c000.snappy.parquet.crc  .part-00000-070e31d7-9989-4845-b21c-41f8608ea2ac-c000.snappy.parquet.crc  .part-00000-079f9aff-3ca0-41e8-a357-bd8233347795-c000.snappy.parquet.crc  .part-00000-09561d21-c31c-4d6d-a61c-bd5f9314a543-c000.snappy.parquet.crc  .part-00000-0a7b52f9-a126-44e2-b401-c743c774bd9f-c000.snappy.parquet.crc  .part-00000-0b5309bd-ded0-43b4-bd4c-c45e36cfe0c3-c000.snappy.parquet.crc  .part-00000-0b918534-9515-4965-bdee-6f481e7a2195-c000.snappy.parquet.crc  .part-00000-0bbdea6e-903a-41c6-8460-b852447e7b1c-c000.snappy.parquet.crc  .part-00000-0c303f1b-4daa-49b6-8293-1358d9e1256b-c000.snappy.parquet.crc  .part-00000-11d7901d-b28c-49a1-8bc4-a0971ae2f8e2-c000.snappy.parquet.crc  .part-00000-142fba1d-24d7-43eb-afc7-dce496e85e65-c000.snappy.parquet.crc  .part-00000-149be114-90ca-4286-8dae-b91aacb3b388-c000.snappy.parquet.crc  (+1091 more)
resources/: Producer.md  schema.txt
src/: Flight.py  FlightEvent.py  FlightSector.py  Point.py  Producer.py  producer.py  utils.py
src/additionals/: logger.py
src/analytics/: batch_df_etl.py  (+2 more)
(+475 files in other folders)
