[project]
name = "aviators-flight-analysis-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "folium>=0.20.0",
    "geodistpy>=1.1.1",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pyopensky>=2.16",
    "pyspark==3.5.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pylint>=4.0.5",
]
